# CMSC-652-Group-Project

./: .gitignore  Project Notes.pages  README.md
.virtual_documents/watermarking-attack/: watermark.ipynb
Anupreet_ROI/: ROI 2 Seeds(In efficient).ipynb  ROI 4 Seeds.ipynb
watermarking-attack/: README.md  ROI 4 Seeds.ipynb  RONI Mass WM Script.ipynb  RONI Watermarking.ipynb  ctscan_densenet169.ipynb  ctscan_mobilenetv2.ipynb  ctscan_resnet50.ipynb  download_datasets.py  jupyter_test.ipynb  krawtchouk_watermark.py  krawtchouk_watermark_all.py  krawtchouk_watermark_automated.py  main.ipynb  pyproject.toml  shared_util.py  watermark.ipynb
watermarking-attack/datasets/ctscan/: test.txt  train.txt  val.txt
watermarking-attack/guo_zhuang/: guo_zhuang.ipynb  gz_watermark_CT.py  watermarker.py
