[project]
name = "watermarking-attack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.6"
dependencies = [
    "torch==2.2.2",
    "torchvision",
    "numpy<2",
    "kagglehub>=0.3.10",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "pillow>=11.1.0",
    "mlxtend>=0.23.4",
]

[dependency-groups]
dev = [
    "ipykernel",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
